--- a/debug/index.html
+++ b/debug/index.html
@@ -33,7 +33,7 @@
       </header>
       <main class="row">
         <div class="jumbotron">
-          <div id="reverter"></div>
+          <div id="name-input"></div>
         </div>
       </main>
       <footer>
