--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
-      testreact
+      Time's Up!
     </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
@@ -43,5 +43,4 @@
       <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
-
 </html>
